--- a/src/app/components/Sticky/Sticky.module.scss
+++ b/src/app/components/Sticky/Sticky.module.scss
@@ -4,7 +4,7 @@
   .element,
   .placeholder {
     width: 100%;
-    z-index: 1;
+    z-index: 2;
     top: 0;
   }
 
