--- a/src/app/pages/SearchResults/SearchResultsSkeleton.module.scss
+++ b/src/app/pages/SearchResults/SearchResultsSkeleton.module.scss
@@ -3,6 +3,8 @@
 .root {
   width: 100%;
   overflow: hidden;
+  position: relative;
+  z-index: 1;
 
   .inner {
     width: 100%;
